# kuiotbigdataclass

./: README.md  mysql.sql  select1.sql  selectgroupfile.sql
c/: Makefile  Xwing  absoluteValue.c  alphabetic.c  arithmetic.c  arrayAssigment.c  arrayCompare.c  bubbleSorting.c  celsius2Fahr  celsius2Fahr.c  changedate  circla  circle.c  dice2  dice2.c  factorial  factorial.c  findMaxInArray  findMaxInArray.c  findMaxInArray2  findValueInArray.c  findValueInArray2.c  gpt  gpt.c  leapYear.c  leapYear2.c  letterAttribute.i  limits.c  literal  literal.c  lotto.c  lotto2.c  maxMidMin2.c  multiplyTable.c  myProfile.c  mysql  name  name.c  oddNumber.c  one2Ten.c  (+35 more)
c/date/: date.c  date.h  main.c  testDate
c/processScore/: main  main.c  testScore
c/rand/: main.c  rand.c  rand.h
c/serial/: main.c
c/string/: myString.c
c_src/: A2Z.c  Xwing.c  baseball.c  bigLetter.c  changedate.c  circle  compare.c  dice.2  dice.c  fahr2Celsius  fahr2Celsius.c  fahr2Celsius2.c  fahr2Celsius3  fahr2Celsius3.c  findMaxInArray2.c  genderRatio  genderRatio.c  hello9.c  incrementor.c  letterAttribute.c  maxMidMin.c  oddEven2.c  one2Ten2.c  ordinaryYear  ordinaryYear2.c  pointer2  pointer5.c  pointerAndArray2  posZeroNeg  posZeroNeg.c  printA2Z.c  returnValue.c  score  score.c  scoreGrade2.c  scoreGrade3.c  scoreGrade4.c  scoreGrade5.c  selectionSorting.c  selectionSorting2.c  (+6 more)
c_src/serial/: serial.c
python_C_mysql/: CMakeLists.txt  booklist.c  booklist.py
sql/: built_in_function.sql  dcl.sql  index.sql  insertdata.sql  procedure.sql  select1.sql  selectgroupfile2.sql  trigger.sql  view.sql
